[gd_scene load_steps=2 format=3 uid="uid://b1oatn1lxrden"]

[ext_resource type="Script" path="res://game/UI/menus/character_select.gd" id="1_lnse3"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lnse3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonPanko" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "KOMACHI
PANKO
🎋🍭"

[node name="ButtonLia" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "RINKOU
ASHELIA
⚡️"

[node name="ButtonTenma" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "TENMA
MAEMI
🍶🦊"

[node name="ButtonPippa" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "PIPKIN
PIPPA
🔌🐰"

[node name="Button" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "KANEKO
LUMI
💫💥"

[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/ButtonPanko" to="." method="_on_button_panko_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/ButtonLia" to="." method="_on_button_lia_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/ButtonTenma" to="." method="_on_button_tenma_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/ButtonPippa" to="." method="_on_button_pippa_pressed"]
